# dog-animation-app

./: .gitignore  README.md  index.html  pyproject.toml  script.js
dog-focus-app/: package-lock.json  package.json
dog-focus-app/dog-focus-app/: app.json  package.json
dog-focus-app/src/app/: page.tsx
dog-focus-app/src/components/: CompleteScreen.tsx  Dog.tsx  DogAnimation.tsx  SpeechBubble.tsx  TimerDisplay.tsx  study-focus-app.tsx
dog-focus-expo/: next.config.js  package-lock.json  package.json
dog-focus-expo/pages/: index.js
dog-forcus-app/: package-lock.json  package.json
dog-forcus-app/src/components/: study-focus-app.tsx
first-demo/: style.css
src/: process_background.py
